--- a/.env
+++ b/.env
@@ -1,16 +1,28 @@
 ENV=local
+
+# Database
+APP_PORT=12002
 DB_HOST=localhost
-APP_PORT=11190
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=147563
 DB_NAME=phenikaa_inten
+
+# Config JWT
 EXTEND_ACCESS_HOUR=720
 EXTEND_ACCESS_MINUTE=720
 EXTEND_REFRESH_HOUR=1440
+
+# Config Redis
 REDIS_URL=localhost:6379
-HTTP_SWAGGER=http://localhost:11190/api/v1/swagger/doc.json
+
+# Config Mail
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
-MAIL_ACCOUNT=
-MAIL_PASS=
+MAIL_ACCOUNT= 20010784@st.phenikaa-uni.edu.vn
+MAIL_PASS= 
+
+# Config Swagger
+ROOT_PATH=
+HTTP_URL=http://localhost:12002
+HTTP_SWAGGER=http://localhost:12002/api/v1/swagger/doc.json
