--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_ACCOUNT= 20010784@st.phenikaa-uni.edu.vn
 MAIL_PASS= 
+DEFAULT_PASSWORD=phenikaa@123
 
 # Config Swagger
 ROOT_PATH=
