refactor module authen

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-ENV=local
+ENV= production
 
 # Database
 APP_PORT=12002
@@ -21,9 +21,13 @@ MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_ACCOUNT= 20010784@st.phenikaa-uni.edu.vn
 MAIL_PASS= 
-DEFAULT_PASSWORD=phenikaa@123
+DEFAULT_PASSWORD=phenikaa@2024
 
 # Config Swagger
-ROOT_PATH=
 HTTP_URL=http://localhost:12002
 HTTP_SWAGGER=http://localhost:12002/api/v1/swagger/doc.json
+
+# Config User Role in Database
+ADMIN_ROLE=1
+ENTERPRISE_ROLE=2
+STUDENT_ROLE=3
