refactor module authen -v1

--- a/.env
+++ b/.env
@@ -19,8 +19,8 @@ REDIS_URL=localhost:6379
 # Config Mail
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
-MAIL_ACCOUNT= 20010784@st.phenikaa-uni.edu.vn
-MAIL_PASS= 
+MAIL_ACCOUNT=sirostudy@gmail.com
+MAIL_PASS=ezoflrmwfeuvopev
 DEFAULT_PASSWORD=phenikaa@2024
 
 # Config Swagger
