--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ EXTEND_ACCESS_MINUTE=720
 EXTEND_REFRESH_HOUR=1440
 
 # Config Redis
-REDIS_URL=localhost:6379
+REDIS_URL=redis-prd:6379
 
 # Config Mail
 MAIL_SERVER=smtp.gmail.com
