--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       depends_on:
         - redis
 
-    redis:
+    redis-prd:
       image: redis:alpine
       restart: unless-stopped
       networks:
