--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ ENV= production
 
 # Database
 APP_PORT=12002
-DB_HOST=localhost
+DB_HOST=103.20.103.224
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=147563
@@ -24,8 +24,8 @@ MAIL_PASS=ezoflrmwfeuvopev
 DEFAULT_PASSWORD=phenikaa@2024
 
 # Config Swagger
-HTTP_URL=http://localhost:12002
-HTTP_SWAGGER=http://localhost:12002/api/v1/swagger/doc.json
+HTTP_URL=https://phenikaa-inten.linkdevcraft.online:12002
+HTTP_SWAGGER=https://phenikaa-inten.linkdevcraft.online:12002/api/v1/swagger/doc.json
 
 # Config User Role in Database
 ADMIN_ROLE=1
