--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_HOST=103.20.103.224
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=147563
-DB_NAME=phenikaa_inten
+DB_NAME=phenikaa_intern
 
 # Config JWT
 EXTEND_ACCESS_HOUR=720
@@ -15,6 +15,7 @@ EXTEND_REFRESH_HOUR=1440
 
 # Config Redis
 REDIS_URL=redis-prd:6379
+# REDIS_URL=localhost:6379
 
 # Config Mail
 MAIL_SERVER=smtp.gmail.com
