--- a/.env.dev
+++ b/.env.dev
@@ -25,8 +25,8 @@ MAIL_PASS=ezoflrmwfeuvopev
 DEFAULT_PASSWORD=phenikaa@2024
 
 # Config Swagger
-HTTP_URL=https://phenikaa-inten.linkdevcraft.online:12002
-HTTP_SWAGGER=https://phenikaa-inten.linkdevcraft.online:12002/api/v1/swagger/doc.json
+HTTP_URL=https://phenikaa-inten.linkdevcraft.online
+HTTP_SWAGGER=https://phenikaa-inten.linkdevcraft.online/api/v1/swagger/doc.json
 
 # Config User Role in Database
 ADMIN_ROLE=1
